<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home"
    android:background="@drawable/ic_electric_car_2545290">


    <RelativeLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"

        android:layout_height="wrap_content">

    </RelativeLayout>





<!--    <Button-->
<!--        android:id="@+id/findSpot"-->
<!--        android:layout_width="200dp"-->
<!--        android:layout_height="70dp"-->
<!--        android:text="FIND A SPOT"-->
<!--        android:layout_below="@+id/headerLayout"-->

<!--        android:layout_marginLeft="100dp"-->
<!--        android:layout_marginTop="120dp"-->
<!--        android:onClick="findSpot"-->



<!--        />-->


    <Button
        android:id="@+id/bookSpot"
        android:layout_width="175dp"
        android:layout_height="175sp"
        android:layout_below="@+id/headerLayout"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_bg_round"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="30dp"

        android:interpolator="@android:anim/bounce_interpolator"

        android:elevation="1dp"
        android:onClick="bookSpot"
        android:text="BOOK A SPOT"
        android:foreground="?android:attr/selectableItemBackground"
        android:textSize="30dp" />



    <Button
        android:id="@+id/carStatus"
        android:layout_width="175dp"
        android:layout_height="175sp"
        android:layout_below="@+id/bookSpot"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="31dp"

        android:background="@drawable/button_bg_round"

        android:onClick="getCarStatus"
        android:text="YOUR CAR"
        android:textSize="30dp" />




    <Button
        android:id="@+id/profile"
        android:layout_width="175dp"
        android:layout_height="175sp"
        android:layout_below="@+id/carStatus"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="31dp"

        android:background="@drawable/button_bg_round"

        android:onClick="profile"
        android:text="YOUR PROFILE"
        android:textSize="30dp" />


<!--    <at.markushi.ui.CircleButton-->
<!--        android:layout_width="64dip"-->
<!--        android:layout_height="64dip"-->
<!--        android:src="@drawable/ic_person_black_24dp"-->
<!--        app:cb_color="#99CC00"-->
<!--        app:cb_pressedRingWidth="8dip" />-->



<!--    <com.google.android.material.button.MaterialButton-->
<!--        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"-->
<!--        app:cornerRadius="28dp"-->
<!--        android:layout_width="56dp"-->
<!--        android:layout_height="56dp"-->
<!--        android:text="1" />-->


</RelativeLayout>