<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userLogin"
    android:background="@drawable/ic_undraw_login_v483">



    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main"
        android:layout_marginLeft="-20sp"
        android:layout_marginTop="0sp">



        <TextView
            android:id="@+id/mobNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="210sp"
            android:layout_marginLeft="95sp"
            android:text="Mob No"
            android:textStyle="bold"
            android:textSize="20sp"


            />

        <EditText
            android:id="@+id/mobNoValue"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:layout_marginTop="195sp"
            android:layout_marginLeft="190sp"
            android:hint="Mobile No"
            android:textStyle="bold"
            android:textColor="#FFF"
            android:textSize="20sp"
            />








        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="password"
            android:layout_below="@+id/mobNo"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="95sp"
            android:textStyle="bold"
            android:textSize="20sp"
            />

        <EditText
            android:id="@+id/passwordValue"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:minEms="6"
            android:layout_below="@+id/mobNo"
            android:layout_marginTop="-5sp"
            android:layout_marginLeft="190sp"
            android:inputType="textPassword"

            android:hint="password"
            android:textStyle="bold"
            android:textColor="#FFF"
            android:textSize="20sp"
            />






        <Button
            android:id="@+id/login"
            android:layout_width="250sp"
            android:layout_height="wrap_content"

            android:text="Login"

            android:layout_below="@+id/password"
            android:layout_marginTop="30sp"
            android:layout_marginLeft="90sp"
            android:textStyle="bold"
            />







        <TextView
            android:id="@+id/wantToRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:layout_below="@+id/login"
            android:layout_marginLeft="120sp"
            android:layout_marginTop="15sp"

            android:text="No account Yet? Create One"
            android:textColor="#FFF"
            android:onClick="toRegister"
            />



    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"

        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="#0BADAD"
        android:indeterminateTintMode="src_in"
android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>


</RelativeLayout>